--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>sh.lrk</groupId>
     <artifactId>cleanfoot</artifactId>
-    <version>3.5.5-SNAPSHOT</version>
+    <version>3.5.5</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -19,6 +20,23 @@
             <url>https://nexus.gammel.cloud/repository/maven-public/</url>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>gammel</id>
+            <name>GammelCloud Releases</name>
+            <url>https://nexus.gammel.cloud/repository/maven-releases/</url>
+            <layout>default</layout>
+        </repository>
+        <snapshotRepository>
+            <uniqueVersion>true</uniqueVersion>
+            <id>gammel</id>
+            <name>GammelCloud Snapshots</name>
+            <url>https://nexus.gammel.cloud/repository/maven-snapshots/</url>
+            <layout>default</layout>
+        </snapshotRepository>
+    </distributionManagement>
 
     <profiles>
         <profile>
