--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sh.lrk</groupId>
     <artifactId>cleanfoot</artifactId>
-    <version>3.5.5</version>
+    <version>3.5.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
