--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,11 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
+        <dependency>
             <groupId>sun.jdk</groupId>
             <artifactId>tools</artifactId>
             <scope>system</scope>
