--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <repositories>
         <repository>
-            <id>gammel</id>
-            <url>https://nexus.gammel.cloud/repository/maven-public/</url>
+            <id>tmatesoft</id>
+            <url>https://maven.tmatesoft.com/content/repositories/releases/</url>
         </repository>
     </repositories>
 
